iptables/rules.v4
# Generated by iptables-save v1.8.4 on Sun Apr  4 18:43:12 2021
*filter
:INPUT ACCEPT [1593:145631]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1362:13097010]

#
# From https://help.ubuntu.com/community/IptablesHowTo
#

# Allow loopback early.
-A INPUT -i lo -j ACCEPT

#
# Blacklist problem netblocks
#

# China Mobile permanent ban. Constant problems. Emails to abuse@ bounce.
# This appears to be the Chinese military. Each time we banned a host another
# drone showed up, but using a longer time interval between attacks. Attacks
# started at 1s apart, then 5s, 30s, 1min, 5min, 10min and 30min.
-A INPUT -p all -s 111.0.0.0/10 -j DROP
-A INPUT -p all -s 221.176.0.0/13 -j DROP
-A INPUT -p all -s 221.130.0.0/15 -j DROP
-A INPUT -p all -s 223.119.255.0/24 -j DROP

# Once we banned China Mobile, attacks started from Chinanet
-A INPUT -p all -s 222.184.0.0/13 -j DROP
-A INPUT -p all -s 218.92.0.0/16 -j DROP
-A INPUT -p all -s 117.41.48.0/20 -j DROP
-A INPUT -p all -s 106.119.0.0/16 -j DROP
-A INPUT -p all -s 49.95.0.0/11 -j DROP

# And then from China Internet Network Information Center (CNNIC)
-A INPUT -p all -s 121.4.0.0/15 -j DROP

# Russian site. Emails to abuse@ bounce.
-A INPUT -p all -s 81.161.63.0/24 -j DROP
-A INPUT -p all -s 194.165.16.0/24 -j DROP

# Lithuanian
-A INPUT -p all -s 185.36.81.0/24 -j DROP

# CenturyLink. Does not respond to emails.
-A INPUT -p all -s 97.112.0.0/12 -j DROP

# Digital Ocean. Constant problems. Does not respond to emails.
# They are as bad as the Chines Military. It looks like they are
# working together.
-A INPUT -p all -s 104.131.0.0/16 -j DROP
-A INPUT -p all -s 128.199.0.0/16 -j DROP
-A INPUT -p all -s 192.241.128.0/17 -j DROP
-A INPUT -p all -s 68.183.0.0/16 -j DROP

# Hurricane Electric. Does not respond to emails.
-A INPUT -p all -s 65.49.0.0/17 -j DROP

# Korean. Does not respond to emails.
-A INPUT -p all -s 211.36.128.0/19 -j DROP

# Pakistan. Does not respond to emails.
-A INPUT -p all -s 158.108.0.0/16 -j DROP

# Vietnam.
-A INPUT -p all -s 116.108.0.0/14 -j DROP
-A INPUT -p all -s 171.224.0.0/11 -j DROP

# Hong Kong
-A INPUT -p all -s 5.188.206.0/24 -j DROP

# Sweden
-A INPUT -p all -s 185.246.128.0/22 -j DROP
-A INPUT -p all -s 171.25.193.0/24 -j DROP

# U.S.
-A INPUT -p all -s 199.195.248.0/21 -j DROP

#
# Now on to allowed stuff
#

# Allow established sessions.
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

#  Allow ping.
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Allow DHCP.
-A INPUT -p udp --dport 68 -j ACCEPT

# Allow DNS and replies sent over UDP.
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT

# SFTP for Bitvise backup.
# ??? Something like https://stackoverflow.com/a/26661411,
# but we need the client rules, not the server rules.

# Allow the webserver services.
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

#
# The stealth rule
#

# Drop all other traffic. Test a Bitvise backup after enabling
# this rule due to SFTP. I have not been able to get it working...
# -A INPUT -j DROP

COMMIT
# Completed on Sun Apr  4 18:43:12 2021
